# compare

./: .travis.yml  Cargo.toml  README.md  deploy-docs.sh  search-index.js
compare/: fn.max.html  fn.min.html  fn.natural.html  index.html  sidebar-items.js  stability.html  stability.json  struct.Borrow.html  struct.Borrowing.html  struct.Extract.html  struct.Natural.html  struct.Rev.html  struct.Swap.html  struct.Then.html  trait.Compare.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
src/: lib.rs
src/compare/: lib.rs.html
src/compare/lib.rs/: lib.rs.html
src/compare/src/: lib.rs.html
